# rejected-peps

./: .flake8  .gitignore  .mailmap  .upload.bat  CHANGELOG.md  LICENSE  NEWS.md  README.md  check.py  pyproject.toml  setup.py  upload.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: conf.py  index.rst  make.bat  quickstart.rst
docs/guides/: index.rst  init.rst  pep204.rst  pep211.rst  pep212.rst  pep259.rst  pep265.rst  pep276.rst  pep281.rst  pep294.rst
rejected-peps/: __init__.py  pep212.py  pep276.py  pep303.py  pep326.py  pep559.py
rejected_peps/: __init__.py  combined.py  pep204.py  pep211.py  pep212.py  pep259.py  pep265.py  pep276.py  pep281.py  pep294.py  pep303.py  pep313.py  pep3140.py  pep326.py  pep335.py  pep336.py  pep349.py  pep351.py  pep416.py  pep535.py  pep559.py  pep754.py  test.py
whatsnew/: 0.4.0.md  0.4.md  0.5.md  0.6.md
